--- a/css/style06_slant.css
+++ b/css/style06_slant.css
@@ -89,8 +89,53 @@ img {
 }
 
 .showcase .grid {
+    overflow: visible;  
+    /* this avoids scollbar. make the form inside showcase visible w/o scollbar */
     grid-template-columns: 55% 45%;
     gap: 30px;
+}
+
+.showcase-form {
+    position: relative;
+    top: 60px;
+    height: 350px;  /* this is too big so overflow the area */
+    width: 400px;
+    padding: 40px;
+    z-index: 100;  /* always be in the front */
+}
+
+.showcase-form .form-control {
+    margin: 30px 0;
+}
+
+/* excluding button */
+.showcase-form input[type='text'],
+.showcase-form input[type='email'] {
+    border: 0;
+    border-bottom: 1px solid #b4becb;
+    width: 100%;
+    padding: 3px;
+    font-size: 16px;
+}
+
+/* remove outline border upon focus */
+.showcase-form input:focus {
+    outline: none;
+}
+
+.showcase::before,
+.showcase::after {
+    content: '';
+    position: absolute;
+    height: 100px;
+    bottom: -70px;
+    right: 0;
+    left: 0;
+    background: #fff;
+    transform: skewY(-3deg);
+    -webkit-transform: skewY(-3deg);
+    -moz-transform: skewY(-3deg);
+    -ms-transform: skewY(-3deg);
 }
 
 /**********************
@@ -101,6 +146,35 @@ img {
     margin: 0 auto;  /* top, bottom: 0; left and right: auto */
     overflow: auto;  /* this fixes 10px top margin of h1 logo */
     padding: 0 40px;
+}
+
+.card {
+    background: #fff;
+    color: #333;
+    border-radius: 10px;
+    /* horizontal, vertical, blur, black-transparency (0.2) */
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin: 10px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 30px;
+    cursor: pointer;
+    background: var(--primary-color);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-outline {
+    background-color: transparent;
+    border: 1px #fff solid;
+}
+
+.btn:hover {
+    transform: scale(0.98);
 }
 
 /* if not in ".navbar .flex" */
