--- a/css/utilities02_cloud.css
+++ b/css/utilities02_cloud.css
@@ -62,6 +62,17 @@
     color: #333;
 }
 
+.bg-primary a, 
+.btn-primary a,
+.bg-secondary a, 
+.btn-secondary a,
+.bg-dark a, 
+.btn-dark a,
+.bg-light a, 
+.btn-light a {
+    color: #fff;
+}
+
 /* Text sizes */
 .lead {
     /* lead for paragraph */
