--- a/css/style15.css
+++ b/css/style15.css
@@ -8,6 +8,8 @@
     --secondary-color: #1c3fa8;
     --dark-color: #002240;
     --light-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 /* Reset */
@@ -44,6 +46,13 @@ p {
 
 img {
     width: 100%; /* full width of its container */
+}
+
+code,
+pre {
+    background: #333;
+    color: #fff;
+    padding: 10px;
 }
 
 /**********************
@@ -208,7 +217,8 @@ img {
 }
 
 /* Features */
-.features-head img {
+.features-head img,
+.docs-head img {
     width: 200px;
     justify-self: flex-end;
 }
@@ -235,6 +245,30 @@ img {
     grid-column: 1 / span 2;
 }
 
+/* Docs */
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    /* vertical alignment. flex-start puts items
+       from top to bottom; flex-end puts items 
+       from bottom to top */
+    align-items: flex-start;  
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover {
+    font-weight: bold;
+}
+
+.docs-main h3 {
+    margin: 20px 0;
+}
+
 .footer .social a {
     margin: 0 10px;
 }
@@ -245,7 +279,9 @@ img {
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid {
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
