--- a/css/utilities05.css
+++ b/css/utilities05.css
@@ -71,6 +71,21 @@
     color: #fff;
 }
 
+/* Text colors */
+.text-primary {
+    color: #00f;
+}
+.text-secondary {
+    color: var(--secondary-color);
+}
+.text-dark {
+    color: var(--dark-color);
+}
+.text-light {
+    color: var(--light-color);
+}
+
+
 /* Text sizes */
 .lead {
     /* lead for paragraph */
@@ -98,6 +113,28 @@
 
 .text-center {
     text-align: center;
+}
+
+/* Alert */
+.alert {
+    background-color: var(--light-color);
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 15px 0;
+}
+
+.alert i {
+    margin-right: 10px;
+}
+
+.alert-success {
+    background-color: var(--success-color);
+    color: #fff;
+}
+
+.alert-error {
+    background-color: var(--error-color);
+    color: #fff;
 }
 
 /* if not in ".navbar .flex" */
