--- a/css/style15.css
+++ b/css/style15.css
@@ -55,6 +55,11 @@ pre {
     padding: 10px;
 }
 
+.hidden {
+    visibility: hidden;
+    height: 0; /* make sure hidden area not to take space */
+}
+
 /**********************
  navbar 
 ***********************/
@@ -107,6 +112,11 @@ pre {
     gap: 30px;
 }
 
+/* animation */
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
     position: relative;
     top: 60px;
@@ -114,6 +124,7 @@ pre {
     width: 400px;
     padding: 40px;
     z-index: 100;  /* always be in the front */
+    animation: slideInFromRight 1s ease-in; 
 }
 
 .showcase-form .form-control {
@@ -156,6 +167,7 @@ pre {
 
 .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in; 
 }
 
 .stats-heading {
@@ -273,6 +285,42 @@ pre {
     margin: 0 10px;
 }
 
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0)
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0)
+    }
+}
+
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+    100% {
+        transform: translateY(0)
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+    100% {
+        transform: translateY(0)
+    }
+}
+
 /* For views on Tablets and under */
 @media(max-width: 768px) {
     .grid, 
@@ -293,16 +341,35 @@ pre {
     .showcase-text {
         text-align: center;
         margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
     }
 
     .showcase-form {
         justify-self: center;
         margin: auto;
+        animation: slideInFromBottom 1s ease-in;
     }
 
     .cli .grid > *:first-child {
         grid-column: 1;
         grid-row: 1;
+    }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid > *:first-child,
+    .features-main .grid > *:nth-child(2) {
+        grid-column: 1;
     }
 }
 
